--- a/README
+++ b/README
@@ -43,9 +43,7 @@ smb://[<domain>;][<user>@]<server>/<share>[/path][?arg=val[&arg=val]*]
 Aruments supported by libsmb2 are :
  sec=<mech>    : Mechanism to use to authenticate to the server. Default
 	         is any available mech, but can be overridden by :
-		 krb5: Use Kerberos using credentials from kinit.
-		 krb5cc: Use Kerberos using credentials from credentials
-	                 cache.
+		 krb5: Only use Kerberos
 		 ntlmssp : Only use NTLMSSP
 
 
