Drop using the naked krb5 APIs to manage the krb5 creds cache. Instead use gss_acquire_cred_with_password() to create a temporary gss creds cache and use it.
GSSAPI uses the default creds cache. Re-direct the cache to MEMORY
using krb5 APIs so that the TGT and creds will be destroyed once the
current session is complete.

--- a/README
+++ b/README
@@ -53,6 +53,9 @@ Aruments supported by libsmb2 are :
 		  2.02, 2.10, 3.00, 3.02 : negotiate a specific version.
 		  Default is to negotiate any SMB2 or SMB3 version.
 
+NOTE:-
+	When using krb5cc mode use smb2_set_domain() and smb2_set_password() in the examples and applications
+
 Authentication
 ==============
 Libsmb2 provides two different modes of doing authentication. This needs
