Enable SMB2 signing :- Sign an outgoing pdu.
Use openssl libcrypto to compute the signatures
added config checks for openssl headers and library

SMB3 signing is not implemented yet.

Signed-off-by: SARAT KUMAR BEHERA <beherasaratkumar@gmail.com>
Signed-off-by: Ronnie Sahlberg <ronniesahlberg@gmail.com>

--- a/README
+++ b/README
@@ -130,6 +130,11 @@ Use :
 from your application before you connect to the server.
 
 
+SMB2/3 SIGNING
+==============
+Signing is only supported for SMB2 and when using sec=krb5.
+
+
 BUILDING LIBSMB2
 ===============
 
