--- a/README
+++ b/README
@@ -146,7 +146,8 @@ by calling :
 
 SMB2/3 SIGNING
 ==============
-Signing is only supported for SMB2 and when using sec=krb5.
+Signing is only supported with KRB5 or with the builtin ntlmssp support.
+Signing is not supported when the gss-ntlmssp mech plugin is used.
 
 
 BUILDING LIBSMB2
