--- a/README
+++ b/README
@@ -192,3 +192,10 @@ If you want build libraries with Kerberos support, execute this script instead:
 
 	./build-with-krb5.sh
 
+
+ESP32
+-----
+
+libsmb2 is pre-configured for the ESP32 micro-controller. Simply
+clone this project in the 'components' directory of the ESP32 project
+and it will automatically be included in the build process.
