--- a/README
+++ b/README
@@ -133,8 +133,8 @@ by calling :
 
 SMB2/3 SIGNING
 ==============
-Signing is only supported with KRB5 or with the builtin ntlmssp support.
-Signing is not supported when the gss-ntlmssp mech plugin is used.
+Signing is supported with KRB5, with the builtin ntlmssp support and with
+gss-ntlmssp mech plugin.
 
 SMB3 Encryption
 ===============
