--- a/README
+++ b/README
@@ -195,3 +195,16 @@ ESP32
 libsmb2 is pre-configured for the ESP32 micro-controller. Simply
 clone this project in the 'components' directory of the ESP32 project
 and it will automatically be included in the build process.
+
+Playstation2
+------------
+EE, Emotion-Engine, is the main CPU for the PS2.
+To compile libsmb2 for the PS2 EE, first install the PS2 toolchain and
+PS2 SDK and set it up.
+
+Then to build libsmb2, run
+  $ cd lib
+  $ make -f Makefile.PS2_EE
+
+Then copy the resulting libsmb2.a as well as the include/smb2 headers to your
+project and compile your project with -DPS2_EE_PLATFORM .
