--- a/README
+++ b/README
@@ -196,16 +196,28 @@ toolchain (Arduino is not supported). Simply clone this project in the
 'components' directory of the ESP32 project and it will automatically be
 included in the build process.
 
-Playstation2
-------------
+Playstation2 EE
+---------------
 EE, Emotion-Engine, is the main CPU for the PS2.
-To compile libsmb2 for the PS2 EE, first install the PS2 toolchain and
-PS2 SDK and set it up.
+There are two versions of libsmb2 for EE. One version for using the LWIP
+stack also running on EE (libsmb2_ip and linking with -lps2ip) and a different
+version for when the LWIP stack is running on the IOP (libsmb2_ips and linking
+with -lps2ips)
+To compile libsmb2 these two versions of PS2 for EE you need to first install
+the PS2 toolchain and PS2 SDK and set it up.
 
-To build libsmb2.a, a version of libsmb2 for the EE tcpip stack:
+To build libsmb2_ip.a, a version of libsmb2 for the EE tcpip stack:
   $ cd lib
-  $ make -f Makefile.PS2_EE clean
-  $ make -f Makefile.PS2_EE install
+  $ make -f Makefile.PS2_EE_IP clean
+  $ make -f Makefile.PS2_EE_IP install
+
+To build libsmb2_ips.a, a version of libsmb2 for the IOP tcpip stack:
+  $ cd lib
+  $ make -f Makefile.PS2_EE_IPS clean
+  $ make -f Makefile.PS2_EE_IPS install
+
+You can compile and install both these stacks and choose between which version
+of libsmb2 you will use by either linking with -lsmb2_ip or -lsmb2_ips
 
 PlayStation 3
 -------------
