--- a/README
+++ b/README
@@ -207,6 +207,16 @@ To build libsmb2.a, a version of libsmb2 for the EE tcpip stack:
   $ make -f Makefile.PS2_EE clean
   $ make -f Makefile.PS2_EE install
 
+IOP, IO-Processor is the secondary CPU for the PS2.
+To compile libsmb2 for the PS2 IOP, first install the PS2 toolchain and
+PS2 SDK and set it up.
+
+Then to build libsmb2, run
+  $ cd lib
+  $ make -f Makefile.PS2_IOP clean
+  $ make -f Makefile.PS2_IOP install
+
+
 PlayStation 3
 -------------
 PPU, PowerPC, is the main CPU for the PS3.
