--- a/README
+++ b/README
@@ -34,7 +34,7 @@ SMB URL Format
 The SMB URL format is currently a small subset of the URL format that is
 defined/used by the Samba project.
 The goal is to eventually support the full URL format, thus making URLs
-interchangable between Samba utilities and Libsmb2 but we are not there yet.
+interchangeable between Samba utilities and Libsmb2 but we are not there yet.
 
 smb://[<domain>;][<user>@]<server>[:<port>]/<share>[/path][?arg=val[&arg=val]*]
 
