--- a/README
+++ b/README
@@ -265,9 +265,16 @@ and set it up.
 Then to build libsmb2, run
   $ cd lib
   $ make -f Makefile.DC_KOS clean install
+  
+Xbox 360 (Xbox 360 SDK)
+----------------------
+Xbox 360 CPU is a PPC(PowerPC) Xenon which only supports big endian values.
+To compile libsmb2 for the Xbox 360, first install the Xbox 360 SDK(with all features), Microsoft Visual C++ 2010 Ultimate and Windows XP(Recommended) or Windows 7.
 
-The process will copy the resulting libsmb2.a and the include/smb2 headers to your
-KallistiOS toolchain install location addons folder.
-NOTE: There is not yet a kos-ports entry for libsmb2 but once a versioned release
-that includes Dreamcast support is created installing from kos-ports will become
-the preferred method of installation.
+Then to build libsmb2, go to Xbox 360 folder 
+and open the provided .sln file, Then pres the green button to build:
+
+The process will generate the resulting libsmb2.lib. So you copy the include files
+to your Xbox 360 project.
+
+NOTE: This port was based on XBMC-360 port by BDC(Brent De Cartet) and now being updated to libsmb2 standards to best performance.
