--- a/README
+++ b/README
@@ -272,9 +272,9 @@ Xbox 360 CPU is a PPC(PowerPC) Xenon which only supports big endian values.
 To compile libsmb2 for the Xbox 360, first install the Xbox 360 SDK(with all features), Microsoft Visual C++ 2010 Ultimate and Windows XP(Recommended) or Windows 7.
 
 Then to build libsmb2, go to Xbox 360 folder 
-and open the provided .sln file, Then pres the green button to build:
+and open the provided .sln file, Then hit the green button to build:
 
-The process will generate the resulting libsmb2.lib. So you copy the include files
-to your Xbox 360 project.
+The process will result a libsmb2.lib. So you copy the include files
+and the .lib file to your Xbox 360 project.
 
 NOTE: This port was based on XBMC-360 port by BDC(Brent De Cartet) and now being updated to libsmb2 standards to best performance.
