--- a/README
+++ b/README
@@ -265,7 +265,20 @@ and set it up.
 Then to build libsmb2, run
   $ cd lib
   $ make -f Makefile.DC_KOS clean install
-  
+
+Xbox (Xbox XDK)
+----------------------
+Xbox CPU is acustom Intel Pentium III Coppermine-based processor which only supports litlle endian values.
+To compile libsmb2 for the Xbox, first install the Xbox XDK(with all features), Microsoft Visual C++ 2003 Professional and Windows XP(Recommended).
+
+Then to build libsmb2, go to Xbox folder 
+and open the provided .sln file, Then hit the green button to build:
+
+The process will result a libsmb2.lib. So you copy the include files
+and the .lib file to your Xbox project.
+
+NOTE: This port was based on XBMC-360 port by BDC(Brent De Cartet) and now being updated to libsmb2 standards to best performance.
+
 Xbox 360 (Xbox 360 SDK)
 ----------------------
 Xbox 360 CPU is a PPC(PowerPC) Xenon which only supports big endian values.
