--- a/README
+++ b/README
@@ -269,7 +269,7 @@ Then to build libsmb2, run
 Xbox (Xbox XDK)
 ----------------------
 Xbox CPU is acustom Intel Pentium III Coppermine-based processor which only supports litlle endian values.
-To compile libsmb2 for the Xbox, first install the Xbox XDK(with all features), Microsoft Visual C++ 2003 Professional and Windows XP(Recommended).
+To compile libsmb2 for the Xbox, first install the Xbox XDK(with all features), Microsoft Visual C++ 2003 Professional and Windows XP.
 
 Then to build libsmb2, go to Xbox folder 
 and open the provided .sln file, Then hit the green button to build:
