Remove GPL Socket emulation(except the wide code)
Remove duplicate codes in libsmb2.h and aes.c
Add missing macros
Remove some useless code
Xbox XDK and Xbox 360 SDK doesn´t support getpid
Fix readme
use compat.h header in sys/socket.h

--- a/README
+++ b/README
@@ -275,6 +275,12 @@ Then to build libsmb2, run
   $ cd lib
   $ make -f Makefile.DC_KOS clean install
 
+The process will copy the resulting libsmb2.a and the include/smb2 headers to your
+KallistiOS toolchain install location addons folder.
+NOTE: There is not yet a kos-ports entry for libsmb2 but once a versioned release
+that includes Dreamcast support is created installing from kos-ports will become
+the preferred method of installation.
+
 Xbox (Xbox XDK)
 ----------------------
 Xbox CPU is acustom Intel Pentium III Coppermine-based processor which only supports litlle endian values.
