--- a/README
+++ b/README
@@ -215,17 +215,17 @@ EE, Emotion-Engine, is the main CPU for the PS2.
 To compile libsmb2 for the PS2 EE, first install the PS2 toolchain and
 PS2 SDK and set it up.
 
-To build libsmb2_ip.a, a version of libsmb2 for the EE tcpip stack:
+To build libsmb2.a, a version of libsmb2 for the EE tcpip stack:
   $ make -f Makefile.platform clean
   $ make -f Makefile.platform ps2_ee_install
 
 EE Using IOP Stack, It´s a different of EE
-version for when the LWIP stack is running on the IOP (libsmb2_ips and linking
+version for when the LWIP stack is running on the IOP (libsmb2_rpc and linking
 with -lps2ips)
 
-To build libsmb2_ips.a, a version of libsmb2 for the IOP tcpip stack:
+To build libsmb2_rpc.a, a version of libsmb2 for ee with IOP tcpip stack:
   $ make -f Makefile.platform clean
-  $ make -f Makefile.platform ps2_ips_install
+  $ make -f Makefile.platform ps2_rpc_install
 
 IOP, IO-Processor is the secondary CPU for the PS2.
 The library is been used to build smb2man.irx module but it doesn´t comes with the library installed, To install libsmb2 for the PS2 IOP and smb2man.irx, first install the PS2 toolchain and PS2SDK and set it up.
