--- a/README
+++ b/README
@@ -61,6 +61,8 @@ Arguments supported by libsmb2 are :
   ndr32         : DCERPC: only offer NDR32 transfer syntax. (default)
   ndr64         : DCERPC: only offer NDR64 transfer syntax.
   ndr3264       : DCERPC: offer both NRD32 and NDR64 transfer syntax.
+  le            : DCERPC: send PDUs in Little-Endian format
+  be            : DCERPC: send PDUs in Big-Endian format
 NOTE:-
 	When using krb5cc mode use smb2_set_domain() and smb2_set_password() in the examples and applications
 
